mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod-1
  namespace: database
spec:
  containers:
    - name: mysql
      image: mysql:8
      ports:
        - containerPort: 3306
