mysqld.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-config-test
spec:
  containers:
    - name: mysql
      image: mysql:8.0
      volumeMounts:
        - name: mysql-config-volume
          mountPath: /etc/mysql/conf.d

  volumes:
    - name: mysql-config-volume
      configMap:
        name: mysql-config
