pod-vpc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pv-pod
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /tmp/erfan
          name: web-storage-kskus
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
  volumes:
    - name: web-storage-kskus
      persistentVolumeClaim:
        claimName: erfan-pvc
