pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ej
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ej
  template:
    metadata:
      labels:
        app: nginx-ej
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
