service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web
spec:
  selector:
    app: nginx-ej
  ports:
    - port: 80
      targetPort: 80
