svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ej-service
spec:
  type: NodePort
  selector:
    app: nginx-ej
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
