ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: erfan-us.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-test-service
            port:
              number: 80
